15080
```scala
Welcome to Scala version 2.8.0.Beta1-prerelease (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_17).
Type in expressions to have them evaluated.
Type :help for more information.

scala> new collection.mutable.WeakHashMap[String,String]()
res0: scala.collection.mutable.WeakHashMap[String,String] = Map()

scala> collection.mutable.WeakHashMap[String,String]()    
<console>:5: error: value WeakHashMap is not a member of package scala.collection.mutable
       collection.mutable.WeakHashMap[String,String]()
                          ^
```

the 2.8 collections SID says "You can form an instance of any collection by writing the class name followed by its elements... The same also holds for specific collection implementations."
